--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <img src="header.webp" alt="">
-    <img src="" alt="">
+    <img src="hero.jpg" alt="">
   </body>
 </html>
