--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <img src="header.webp" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.webp" alt="">
+    <img src="clasica.webp" alt="">
   </body>
 </html>
