--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <style media="screen">
       body {
         margin: 0px;
-        border: 10px solid #192b36;
       }
       img {
         max-width: 100%;
@@ -15,9 +14,6 @@
     </style>
   </head>
   <body>
-    <img src="header.webp" alt="">
-    <img src="hero.jpg" alt="">
-    <img src="acustica.webp" alt="">
-    <img src="clasica.webp" alt="">
+    <img src="nueva-version.jpg" alt="">
   </body>
 </html>
