--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
       body {
         margin: 0px;
       }
+
       img {
         max-width: 100%;
         vertical-align: top;
       }
+
+      img#responsive {
+        display: none;
+      }
+      @media screen and (max-width: 768px) {
+        img#responsive {
+          display: block;
+        }
+      }
     </style>
   </head>
   <body>
+    <img src="invie-responsive.png" alt="" id="responsive">
     <img src="header.webp" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.webp" alt="">
